--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
     "graphql": "^16.10.0",
     "graphql-http": "^1.22.4",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
+    "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.1.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
