--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "google-auth-library": "^9.15.1",
     "graphql": "^16.10.0",
     "graphql-http": "^1.22.4",
+    "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -28,6 +30,7 @@
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.1.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "socket-io": "^1.0.0",
     "socket.io": "^4.8.1",
