--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "graphql": "^16.10.0",
     "graphql-http": "^1.22.4",
@@ -30,12 +32,13 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.11.0",
+    "mongoose": "^8.12.1",
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
     "socket-io": "^1.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
